assets/css/default.css
/*initialize style*/
* {
  padding: 0;
  margin: 0;
  font-family: sans-serif;
}

body {
  width: 960px;
  margin: auto;
  min-width: 320px;
  overflow-x: hidden;
}

a, a:hover, a:active, a:visited {
  color: inherit;
  text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
  margin: 1em 0;
  color: #357ca0;
  font-weight: bold;
}

p, li, time {
  font-size: 14px;
  line-height: 1.8em;
  color: #888888;
  font-weight: normal;
}

li {
  margin-left: 1em;
}

blockquote {
  padding: 0 1em;
  margin: 2em 0;
  border-left: solid 8px #dfe1e3 ;
}

blockquote p {
  font-size: 16px;
}

code {
  color: #f92672;
}

table {
  width: 100%;
}

tr, th, td {
  text-align: center;
  margin: auto;
  padding: inherit;
}

p>img, .mobile {
  width: 600px;
  max-width: 600px;
  margin: 30px auto;
  display: block;
}

.defaultColor {
  color: #357ca0
}

/*index page*/
.indexBox {
  width: 800px;
  opacity: 0;
  margin: 200px auto 50px auto;
  border-top: solid 4px #357ca0;
  border-bottom: solid 4px #357ca0;
  background: rgba(255, 255, 255, 0.6);
  transition: all 0.5s ease 0s;
}

.navTitle, .navItem {
  list-style: none;
  font-size: 14px;
  line-height: 1em;
  margin: 1em 0;
  color: #357ca0;
  font-weight: bold;
}

.briefBox {
  margin-bottom: 50px;
  text-align: center;
  z-index: 1000;
}

.briefBox img {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  display: inline-block;
  vertical-align: middle;
}

.briefBox .blogTitle {
  margin: 30px 0;
}

.briefBox .blogDescription {
  margin: 0;
  font-weight: normal;
}

.navBox {
  width: 240px;
  margin: 50px 0;
  display: inline-block;
  vertical-align: top;

}

.navBox ul {
  margin: 0 50px 0 0;
  text-align: right;
}

.navBox li {
  margin-left: 0;
}

.navTitle {
  color: #888888;
}

.navItem {
  color: #357ca0;
}

.listBox {
  width: 550px;
  margin: 50px 0;
  display: inline-block;
}

.listBox .arrow {
  height: 10px;
  top: 2px;
  left: -20px;
  position: absolute;
  display: none;
  vertical-align: bottom;
}

.listItem {
  margin: 20px 0;
  cursor: pointer;
}

.listItem .title h5 {
  position: relative;
}

.listItem:hover .arrow {
  display: block;
}

.pagination {
  height: 20px;
  margin: 10px;
  color: #357ca0;
  font-size: 14px;
  text-align: center;
  position: relative;
}

.page-number {
  width: 200px;
  position: absolute;
  left: 50%;
  margin-left: -100px;
}

.newer-posts {
  float: left;
}

.older-posts {
  float: right;
}

.cas {
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  opacity: 0.5;
}

/*post page*/

.postTitle {
  margin: 50px 20px;
  text-align: center;
}

.postBody {
  margin: 50px 20px;
}

.fix {
  position: fixed;
  right: 10%;
  bottom: 15%;
}

.fix img {
  height: 100px;
}

.menu {
  position: relative;
}

.menu:hover .toggleMenu {
  display: block;
}

.toggleMenu {
  top: -300px;
  left: -80px;
  position: absolute;
  display: none;
}

.otherPost {
  height: 40px;
}

.otherPost h5 {
  max-width: 300px;
  white-space: nowrap;
  display: inline-block;
}

.otherPost img {
  height: 10px;
  display: inline-block;
}

.prevPost {
  max-width: 45%;
  overflow-x: hidden;
  display: inline-block;
  float: left;
}

.nextPost {
  max-width: 45%;
  overflow-x: hidden;
  display: inline-block;
  float: right;
}

/*author page*/

.portrait {
  width: 200px;
  margin: auto;
  text-align: center;
}

.portrait img {
  width: 64px;
  height: 64px;
  border-radius: 50%;
}

.userAgent {
  text-align: center;
}

.ip {
  text-align: center;
}

/*adaption for different devices*/
@media (max-width: 1366px) {
  .fix {
    right: 5%;
  }
}

@media (max-width: 1260px) {
  .fix img {
    height: 50px;
  }

  .menu:hover .toggleMenu {
    display: none;
  }

  .author-template .fix img {
    display: none;
  }
}

@media (max-width: 640px) {
  body {
    width: 100%;
  }

  img, p>img, table, .mobile {
    max-width: 100%;
  }

  pre {
    padding-left: 1em;
  }

  .indexBox {
    width: 100%;
  }

  .navBox {
    width: 100%;
    margin: auto;
  }

  .navBox ul {
    margin: auto;
    text-align: center;
  }

  .navBox li {
    display: none;
  }

  .navBox .navTitle {
    width: 50%;
    padding: 5px;
    margin: auto;
    border: solid 1px #cccccc;
    border-radius: 10px;
    display: block;
    color: #cccccc;
  }

  .listBox {
    margin: 20px 0;
    width: 100%;
  }

  .listItem {
    padding: 0 20px;
  }

  .listItem .arrow {
    display: none;
  }

  .otherPost {
    height: 80px;
  }

  .prevPost {
    max-width: 90%;
    margin: 0 20px;
    overflow-x: hidden;
    display: block;
    float: none;
  }

  .prevPost img {
    display: none;
  }

  .nextPost {
    max-width: 90%;
    margin: 0 20px;
    overflow-x: hidden;
    display: block;
    float: none;
  }

  .nextPost img {
    display: none;
  }
}

